processed/jira/txt/LU/LU-13037.txt
Key:        LU-13037
Summary:    print stats for NRS TBF rules
Link:       https://jira.whamcloud.com/browse/LU-13037
Type:       Improvement
Priority:   Major
Status:     Open
Resolution: Unresolved
Assignee:   Li Xi
Reporter:   Mahmoud Hanafi
Created:    Sat, 30 Nov 2019 06:34:04 +0000
Updated:    Sat, 8 Jun 2024 00:29:24 +0000
Labels:     TBF
Links:      Related: is related to  LU-17920; Related: is related to  LU-17296; Related: is related to  LU-14501

--- Description ---
We would like a way to dump current tbf stats. 

For example print all the UID being tracked and what are each UID bucket usage.

--- Comment (mhanafi, Thu, 1 Apr 2021 19:03:32 +0000) ---
We have been using the patch. But I think it needs addition work to be more useful. We will need to think about how it could improved.

--- Comment (pjones, Thu, 1 Apr 2021 18:35:18 +0000) ---
mhanafi jaylan you have not provided any feedback as to whether this patch meets your requirements. However, rumour has it that you are carrying this patch - does this mean that you can now provide us some feedback as to whether this patch is useful and should proceed with landing?

--- Comment (pjones, Sat, 5 Sep 2020 14:37:52 +0000) ---
jaylan any updates on testing this patch?

--- Comment (qian_wc, Fri, 14 Aug 2020 01:37:50 +0000) ---
I build it based on the latest master branch.

It seems that tc_rpc_rate is __u32, while in 2.12.4, it was __u64

To make it pass the build for 2.12.4, you just need to modify it with:

seq_printf(p, "%llu\n", cli->tc_rpc_rate);

Regards,

Qian

--- Comment (jaylan, Thu, 13 Aug 2020 22:42:39 +0000) ---
I had compilation error in lustre-2.12.4 against CentOS 7.7 kernel :

Making all in .

/tmp/rpmbuild-lustre-jlan-UDyILlEP/BUILD/lustre-2.12.4/lustre/ptlrpc/nrs_tbf.c: In function 'nrs_tbf_stats_seq_show':

/tmp/rpmbuild-lustre-jlan-UDyILlEP/BUILD/lustre-2.12.4/lustre/ptlrpc/nrs_tbf.c:3882:2: error: format '%u' expects argument of type 'unsigned int', but argument 3 has type '__u64' [-Werror=format=]

  seq_printf(p, "%u\n", cli->tc_rpc_rate);

  ^

/tmp/rpmbuild-lustre-jlan-UDyILlEP/BUILD/lustre-2.12.4/lustre/ptlrpc/nrs_tbf.c: At top level:

cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]

cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]

cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

cc1: all warnings being treated as errors

make[7]: *** [/tmp/rpmbuild-lustre-jlan-UDyILlEP/BUILD/lustre-2.12.4/lustre/ptlrpc/nrs_tbf.o] Error 1

I do not know how I got those "unrecgonized command line option". Before applying this patch it was compiled fine.

--- Comment (qian_wc, Thu, 13 Aug 2020 09:54:52 +0000) ---
Hi Mahmoud,

I just updated the patch (https://review.whamcloud.com/#/c/36950/), could you please try it again?

Thanks,

Qian

--- Comment (lixi_wc, Mon, 10 Aug 2020 10:05:07 +0000) ---
mhanafi Sorry for the misunderstanding. I found a bug of the patch. Not sure whether that is the cause of the duplicated outputs. The patch will be refreshed soon anyway.

--- Comment (mhanafi, Mon, 10 Aug 2020 06:47:55 +0000) ---
I understand that we have hp and reg. But We get 2 request for the same cpt and queue_type type

 - uid:             929411059
  cpt:             0
  queue_type:      reg
  refs:            1
  rule:            default
--
- uid:             929411059
  cpt:             0
  queue_type:      reg
  refs:            1
  rule:            default
-- 

Yes Peter we would like to get this landed.

--- Comment (lixi_wc, Mon, 10 Aug 2020 01:44:49 +0000) ---
Sorry for late reply.

Why do we get more than 1 stats for a specific cpt and queue_type.

Understood comparing to this, a single stats would be easier to understand. However, this is determined by the internal design and implementation of request handling of Lustre which have good reasons too. And TBF has no other choice but to use and depend on it.

Lustre seperate requests into two different types, regular (reg) requests and high priority (hp) requests. And handling of these two types of requests are seperated in order to make sure high priority requests won't be blocked by many regular requests.

And Lustre divide CPUs into different patitions (cpt). Each patition handles RPC requests independently. 

Because of these existing mechansim, TBF have to set the RPC rate limitations seperately (maybe with the same values), and the stats are seperated for each cpt and request type.

--- Comment (pjones, Sat, 8 Aug 2020 14:59:14 +0000) ---
mhanafi I noticed this week that you are carrying this patch in your distribution. Sorry that we missed your question above. Have you had any other questions/comments about using this change? Do you think that we should proceed with landing it in its current form or is more work required?

--- Comment (mhanafi, Tue, 26 May 2020 23:42:49 +0000) ---
Why do we get more than 1 stats for a specific cpt and queue_type. Here for uid 929411059 we see for cpt=0 and queue_type=reg we get 2 and for cpt=0 and queue_type=hp we get 2.

 nbp13-srv1 /sys/kernel/debug/lustre/ost/OSS/ost_io # cat /sys/kernel/debug/lustre/ost/OSS/ost_io/nrs_tbf_stats| grep -A 4  929411059
- uid:             929411059
  cpt:             0
  queue_type:      hp
  refs:            1
  rule:            default
--
- uid:             929411059
  cpt:             0
  queue_type:      hp
  refs:            1
  rule:            default
--
- uid:             929411059
  cpt:             0
  queue_type:      reg
  refs:            1
  rule:            default
--
- uid:             929411059
  cpt:             0
  queue_type:      reg
  refs:            1
  rule:            default
--

Later for cpt=8 we only 1 for hp and 2 for reg.

- uid:             929411059
  cpt:             8
  queue_type:      hp
  refs:            1
  rule:            default
--
- uid:             929411059
  cpt:             8
  queue_type:      reg
  refs:            1
  rule:            default
--
- uid:             929411059
  cpt:             8
  queue_type:      reg
  refs:            1
  rule:            default

--- Comment (pjones, Sat, 14 Dec 2019 15:03:25 +0000) ---
mhanafi what do you think?

--- Comment (lixi_wc, Sat, 7 Dec 2019 16:07:47 +0000) ---
mhanafi Please feel free to let me know whether the dumped information is what you need.

--- Comment (gerrit, Sat, 7 Dec 2019 16:06:22 +0000) ---
Li Xi (lixi@ddn.com) uploaded a new patch: https://review.whamcloud.com/36950

Subject: LU-13037 nrs: dump stats of TBF clients

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 01af62b6a5305e9d4483dbbbb27aa003cd234099

--- Comment (lixi_wc, Sat, 7 Dec 2019 16:02:18 +0000) ---
Two entries are added into each service: nrs_tbf_stats_reg and nrs_tbf_stats_hp. The first one for regular requests, and the second one for high priority requests. And TBF information of all client classifications will be dumped from each entry. Following is an example of the dumped information:

# cat /sys/kernel/debug/lustre/ost/OSS/ost_io/nrs_tbf_stats_hp
- key:             _10.0.1.253@tcp_10_0_0
  refs:            0
  rule:            default
  rpc_rate:        10000
  ntoken:          2
  token_depth:     3
- key:             _10.0.1.253@tcp_4_0_0
  refs:            0
  rule:            default
  rpc_rate:        10000
  ntoken:          2
  token_depth:     3
- key:             dd.0_10.0.1.253@tcp_10_0_0
  refs:            0
  rule:            default
  rpc_rate:        10000
  ntoken:          2
  token_depth:     3
- key:             dd.0_10.0.1.253@tcp_4_0_0
  refs:            9
  rule:            default
  rpc_rate:        10000
  ntoken:          2
  token_depth:     3
# cat /sys/kernel/debug/lustre/ost/OSS/ost_io/nrs_tbf_stats_reg 
- key:             _10.0.1.253@tcp_10_0_0
  refs:            0
  rule:            default
  rpc_rate:        10000
  ntoken:          2
  token_depth:     3
- key:             _10.0.1.253@tcp_4_0_0
  refs:            0
  rule:            default
  rpc_rate:        10000
  ntoken:          2
  token_depth:     3
- key:             dd.0_10.0.1.253@tcp_10_0_0
  refs:            0
  rule:            default
  rpc_rate:        10000
  ntoken:          2
  token_depth:     3
- key:             dd.0_10.0.1.253@tcp_4_0_0
  refs:            9
  rule:            default
  rpc_rate:        10000
  ntoken:          2
  token_depth:     3

--- Comment (lixi_wc, Fri, 6 Dec 2019 01:38:31 +0000) ---
I am working on a patch that works similar like jobstat, but that is going to take a while.

--- Comment (pjones, Sat, 30 Nov 2019 15:38:57 +0000) ---
Li xi

How possible is this with the current design of TBF?

Peter
